<resources>
    <string name="app_name">BlooodBank</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auth_cycle">AuthCycleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="slider_text">لوريم ايبسوم هو نموذج افتراضي يوضع في التصاميم لتعرض علي العميل ليتصور طريقه وضع النصوص بالتصاميم سواء كانت تصاميم مطبوعه ... بروشور او فلاير علي سبيل المثال ... او نماذج مواقع</string>
    <string name="sign_up_et_confirm_pass">تأكيد كلمة المرور</string>
    <string name="sign_up_et_name">الاسم</string>
    <string name="sign_up_et_emil">البريد الإلكتروني</string>
    <string name="sign_up_et_birth_day">تاريخ الميلاد</string>
    <string name="sign_up_et_last_donation">اخر تاريخ تبرع</string>
    <string name="sign_up_et_phone">رقم الهاتف</string>
    <string name="sign_up_et_password">كلمة المرور</string>
    <string name="sign_up_et_title">انشاء حساب جديد</string>
    """"""
    <string name="choose_blood_type">فصيلة الدم </string>
    <string name="choose_govrenment">اختر المحافظة</string>
    <string name="choose_city">اختر المدينة</string>
    <string name="GPSAlertDialogTitle">"locatin "</string>
    <string name="GPSAlertDialogMessage">location</string>
    <string name="action_settings">location</string>
    <string name="cancel">cancel</string>


</resources>